# CS2_demo_analyzer

./: README.md  config.parse.json  config.parse.local.json  config.train.json  config.train.local.json  download_hltv_event_demos.py  pyproject.toml
cs2_demo_parser/: __init__.py  benchmark_mongo_read.py  cli.py  config.py  export_training_shards.py  faceit.py  model_samples.py  mongo_ml_writer.py  parser_backend.py  pipeline.py  rounds.py  state.py  sync_mongo.py  train_world_model.py  training_data.py  world_model.py
cs2_demo_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
state/: processed_matches.json  processed_matches.local.json
wandb/: latest-run
wandb/run-20260701_215040-brckezwh/: run-brckezwh.wandb
wandb/run-20260701_215040-brckezwh/files/: config.yaml  wandb-metadata.json
wandb/run-20260701_215637-w09g05bk/: run-w09g05bk.wandb
wandb/run-20260701_215704-9tpwo8mp/: run-9tpwo8mp.wandb
wandb/run-20260701_215704-9tpwo8mp/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260701_215720-xxfsdu6l/: run-xxfsdu6l.wandb
wandb/run-20260701_215720-xxfsdu6l/files/: config.yaml  wandb-metadata.json
wandb/run-20260702_010146-afumncci/: run-afumncci.wandb
wandb/run-20260702_010146-afumncci/files/: config.yaml  wandb-metadata.json
wandb/run-20260702_010719-p16fyxpu/: run-p16fyxpu.wandb
wandb/run-20260702_010719-p16fyxpu/files/: config.yaml  wandb-metadata.json
wandb/run-20260702_011100-swudmzqh/: run-swudmzqh.wandb
wandb/run-20260705_084842-jbfp1wy7/: run-jbfp1wy7.wandb
(+4 files in other folders)
